@@ -1,6 +1,11 @@
 ubiquity (1.7.2) UNRELEASED; urgency=low
 
+  [ Evan Dandrea ]
   * XS-Vcs-Bzr is now Vcs-Bzr.
+
+  [ Colin Watson ]
+  * Copy xserver-xorg/config/display/modes to the installed system before
+    reconfiguring usplash (LP: #150930).
 
  -- Evan Dandrea <evand@ubuntu.com>  Mon, 03 Dec 2007 09:18:07 -0500
 
